feat(reporting): [QA-17543] update ContractTargetRegressionTest to use Collectors for list conversion